--- a/action.yml
+++ b/action.yml
@@ -26,8 +26,28 @@ outputs:
   variableId:
     description: 'The Updated Variable ID'
 runs:
-  using: 'node12'
-  main: 'index.js'
+  using: "composite"
+  steps:
+    - uses: actions/setup-node@v4
+      with:
+        node-version: "22.x"
+        cache: "npm"
+
+    - name: Install dependencies
+      run: npm ci
+      shell: bash
+
+    - name: Run action
+      run: node index.js
+      shell: bash
+      env:
+        INPUT_WORKSPACENAME: ${{ inputs.workSpaceName }}
+        INPUT_ORGANIZATIONNAME: ${{ inputs.organizationName }}
+        INPUT_TERRAFORMTOKEN: ${{ inputs.terraformToken }}
+        INPUT_TERRAFORMHOST: ${{ inputs.terraformHost }}
+        INPUT_VARIABLENAME: ${{ inputs.variableName }}
+        INPUT_VARIABLEHCL: ${{ inputs.variableHCL }}
+        INPUT_VARIABLEVALUE: ${{ inputs.variableValue }}
 
 branding:
   icon: 'play'
