--- a/action.yml
+++ b/action.yml
@@ -28,22 +28,21 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
     - uses: actions/setup-node@v4
       with:
         node-version: "22.x"
         cache: "npm"
+        cache-dependency-path: ${{ github.action_path }}/package-lock.json
 
     - name: Install dependencies
       run: npm ci
       shell: bash
+      working-directory: ${{ github.action_path }}
 
     - name: Run action
       run: node index.js
       shell: bash
+      working-directory: ${{ github.action_path }}
       env:
         INPUT_WORKSPACENAME: ${{ inputs.workSpaceName }}
         INPUT_ORGANIZATIONNAME: ${{ inputs.organizationName }}
