--- a/action.yml
+++ b/action.yml
@@ -31,8 +31,8 @@ runs:
     - uses: actions/setup-node@v4
       with:
         node-version: "22.x"
-        cache: "npm"
-        cache-dependency-path: ${{ github.action_path }}/package-lock.json
+        # cache: "npm"
+        # cache-dependency-path: ${{ github.action_path }}/package-lock.json
 
     - name: Install dependencies
       run: npm ci
