--- a/action.yml
+++ b/action.yml
@@ -31,15 +31,16 @@ runs:
     - uses: actions/setup-node@v4
       with:
         node-version: "22.x"
-        cache: "npm"
 
     - name: Install dependencies
       run: npm ci
       shell: bash
+      working-directory: ${{ github.action_path }}
 
     - name: Run action
       run: node index.js
       shell: bash
+      working-directory: ${{ github.action_path }}
       env:
         INPUT_WORKSPACENAME: ${{ inputs.workSpaceName }}
         INPUT_ORGANIZATIONNAME: ${{ inputs.organizationName }}
